This needs to be skinnier to avoid double scrollbar action.

--- a/src/gwt/public/stuff/stuff.css
+++ b/src/gwt/public/stuff/stuff.css
@@ -61,7 +61,7 @@
 
 .itemPanel .pagedGrid {
   margin: 0px 0px 10px 10px;
-  width: 580px;
+  width: 560px;
 }
 
 .itemPanel .sideBar {
